--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta property="og:title" content="Miftaul Mannan Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tasin5541.github.io/portfolio/#/" />
+    <meta property="og:url" content="https://cloudikeme.github.io/#/" />
 
     <style>
       /* width */
