--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <style type="text/css">span.iconify, i.iconify, iconify-icon { display: inline-block; width: 1em; }</style>
     <meta charset="utf-8" />      
-    <link rel="canonical" href="https://tasin5541.github.io/" />
-    <link rel="icon" href="https://tasin5541.github.io/portfolio/#/home/favicon.ico?v=2" />
+    <link rel="canonical" href="https://cloudikeme.github.io/" />
+    <link rel="icon" href="https://github.com/cloudikeme/cloudikeme.github.io/blob/main/victorikeme.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Tasin's Portfolio"
+      name="Cloudikeme's Portfolio"
       content="Web site created using create-react-app"
     />
     <meta property="og:title" content="Miftaul Mannan Portfolio" />
